@@ -15,6 +15,7 @@ examples/procedural-adding-suites-example.pl
 examples/procedural-another-package-example.pl
 examples/procedural-fail-example.pl
 examples/procedural-ok-example.pl
+examples/fail_example.pm
 examples/tester.pl
 examples/tester.png
 lib/Test/Unit.pm
@@ -30,11 +31,13 @@ lib/Test/Unit/HarnessUnit.pm
 lib/Test/Unit/InnerClass.pm
 lib/Test/Unit/Test.pm
 lib/Test/Unit/TestCase.pm
+lib/Test/Unit/TestDecorator.pm
 lib/Test/Unit/TestFailure.pm
 lib/Test/Unit/TestListener.pm
 lib/Test/Unit/TestLoader.pm
 lib/Test/Unit/TestResult.pm
 lib/Test/Unit/TestRunner.pm
+lib/Test/Unit/TestSetup.pm
 lib/Test/Unit/TestSuite.pm
 lib/Test/Unit/TkTestRunner.pm
 lib/Test/Unit/Tutorial.pm
